--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AMMS - ALMUS Maintenance Management System</title>
+    <title>SMART CMMS - ALMUS TECH Maintenance Management System</title>
     <!-- Google Fonts: Inter (English/Vietnamese), Noto Sans KR (Korean) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
