--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/A symbol BLUE-02.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SMART CMMS - ALMUS TECH Maintenance Management System</title>
     <!-- Google Fonts: Inter (English/Vietnamese), Noto Sans KR (Korean) -->
