--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/A symbol BLUE-02.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0" />
     <title>SMART CMMS - ALMUS TECH Maintenance Management System</title>
     <!-- Google Fonts: Inter (English/Vietnamese), Noto Sans KR (Korean) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
